--- a/storm-effects.Rmd
+++ b/storm-effects.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Storm Effects"
+author: "K. Bret Staudt Willet"
 date: "5/22/2020"
 output: 
   html_document:
@@ -8,19 +9,19 @@ output:
 
 *Coursera Course: Reproducible Research, Peer Assessment 2*
 
-```{r packages, warning=FALSE, message=FALSE}
+```{r packages, include=FALSE, warning=FALSE, message=FALSE}
 library(tidyverse)
 library(janitor)
 options(scipen = 999)  # this removes any scientific notation formatting of numbers
 ```
 
-# Synopsis
+## Synopsis
 
 This report examines six decades (1950-2011) of storm event data from the U.S. [National Oceanic and Atmospheric Administration](https://www.noaa.gov/) (NOAA) Storm Database. The purpose of this study is to answer two questions related to the effects of storm events. Both questions consider storm events at a national scale in the United States. The first question pertains to population health effects of storms, as defined by injuries and fatalities. The total number of injuries and fatalities from tornadoes, heat, wind, flood, thunderstorms, and winter storms rate the highest need for concern. The second question pertains to economic consequences of storms, as defined by crop damage and property damage. The total dollar amount of crop damage and property damage from floods, wind, tornadoes, and hail rate the highest need for concern. Attention should be given to the three storm types on both lists: tornadoes, wind, and floods.
 
 The code for this report can be viewed in full [on Github](https://github.com/bretsw/storm-effects/).
 
-# Data Processing
+## Data Processing
 
 The events in the dataset start in the year 1950 and end in November 2011. In the earlier years of the database there are generally fewer events recorded, most likely due to a lack of good records. More recent years should be considered more complete.
 
@@ -32,7 +33,7 @@ The dollar amounts of property damage were listed in an odd way: a number value 
 - **h** for hundred (100), **k** for kilo, or thousand (1,000), **m** for million (1,000,000), **b** for billion (1,000,000,000)
 - **2-7** to mean 10^x, so 10^2, 10^3, 10^4, and so on
 
-```{r, message=FALSE, warning=FALSE, cache=TRUE}
+```{r, include=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
 storm_data <- 
   read_csv("repdata_data_StormData.csv.bz2", col_names = TRUE) 
 
@@ -100,13 +101,13 @@ storm_data <-
 
 The next issue with the dataset is that the observed values of storm event types (`evtype`) contained typos, ambiguous entries, and similarly-themed-but-distinct entries.
 
-```{r}
+```{r, include=FALSE}
 n_storm_types_init <- storm_data$evtype %>% unique() %>% length()  # 977
 ```
 
 Before cleaning, the dataset contained `r n_observations_init` rows, or observations, of `r n_storm_types_init` different types of storm events. Closer examination showed that many of the these event types overlapped, sometimes due to typos, capitalization differences, or slight variations in phrasing (e.g., "wind gusts" vs. "wind advisory"). As a result, I used the `grepl()` function to identify different clusters of storm events, and I then consolidated these to reduce the number of categories of storm types.
 
-```{r}
+```{r, include=FALSE}
 storm_data <- 
   storm_data %>%
   mutate(evtype = tolower(evtype))
@@ -404,17 +405,17 @@ storm_data <-
          )
 ```
 
-```{r}
+```{r, include=FALSE}
 n_storm_types_final <- storm_data$evtype %>% unique() %>% length()  # 977
 ```
 
 This data cleaning process reduced the number of different storm types from `r n_storm_types_init` to `r n_storm_types_final`.
 
-# Results
+## Results
 
 This examination of storm event data sought to answer two questions related to the effects of storm events. Both questions consider storm events at a national scale in the United States. The first question pertains to population health effects of storms, as defined by injuries and fatalities. The second question pertains to economic consequences of storms, as defined by crop damage and property damage.
 
-## Q1. Across the United States, which types of events are most harmful with respect to population health?
+### Q1. Across the United States, which types of events are most harmful with respect to population health?
 
 To create a plot of population health effects of storm events, I took these steps:
 
@@ -422,7 +423,7 @@ To create a plot of population health effects of storm events, I took these step
 1. I calculated the total injuries and fatalities, and mean injuries and fatalities, per event type.
 1. I plotted fatalities (*y*-axis) by injuries (*x*-axis), on log10-scaled axes.
 
-```{r}
+```{r, include=FALSE}
 events_harmful <-
   storm_data %>%
   group_by(evtype) %>% 
@@ -438,7 +439,7 @@ events_harmful <-
          )
 ```
 
-```{r, fig.width=16,fig.height=9}
+```{r, echo=FALSE, fig.width=16,fig.height=9}
 harmful_plot <-
   ggplot(data = events_harmful,
          aes(x = n_injuries, 
@@ -478,7 +479,7 @@ harmful_plot +
   labs(fill='Severity of Harm per Event:', size='Number of Events:')
 ```
 
-```{r, evaluate=FALSE, include=FALSE}
+```{r, eval=FALSE, include=FALSE}
 ggsave("harmful_plot.png", width = 16, height = 9)
 ```
 
@@ -486,7 +487,7 @@ ggsave("harmful_plot.png", width = 16, height = 9)
 
 As observed in Figure 1, the total number of injuries and fatalities from tornadoes, heat, wind, flood, thunderstorms, and winter storms rate the highest need for concern. 
 
-## Q2. Across the United States, which types of events have the greatest economic consequences?
+### Q2. Across the United States, which types of events have the greatest economic consequences?
 
 To create a plot of economic consequences of storm events, I took these steps:
 
@@ -495,7 +496,7 @@ To create a plot of economic consequences of storm events, I took these steps:
 1. I calculated the total crop damage and property damage amount and mean crop damage and property damage amount, per event type.
 1. I plotted property damage (*y*-axis) by crop damage (*x*-axis), on log10-scaled axes.
 
-```{r}
+```{r, include=FALSE}
 events_costly <-
   storm_data %>%
   filter(propdmgexp != ("+") & propdmgexp != ("-")) %>%
@@ -511,7 +512,7 @@ events_costly <-
   filter(n_damage > 0)
 ```
 
-```{r, fig.width=16,fig.height=9}
+```{r, echo=FALSE, fig.width=16,fig.height=9}
 costly_plot <-
   ggplot(data = events_costly,
          aes(x = n_crop_damage + 1, 
@@ -551,7 +552,7 @@ costly_plot +
   labs(fill='Severity of Cost per Event:', size='Number of Events:')
 ```
 
-```{r, evaluate=FALSE, include=FALSE}
+```{r, eval=FALSE, include=FALSE}
 ggsave("costly_plot.png", width = 16, height = 9)
 ```
 
